# GoogleCloudPlatform-_-key-protection-module

./: .gitignore  .golangci.yml  .goreleaser.yaml  .rustfmt.toml  Dockerfile  GEMINI.md  README.md  buf.gen.yaml  buf.yaml  cloudbuild.yaml  gen_keymanager.sh  go.mod  go.sum  renovate.json
.github/workflows/: ci.yml  releaser.yml  scorecard.yml
cmd/agent/: main.go  main_test.go
image/: attestation.service  cloudbuild.yaml  entrypoint.sh  exit_script.sh  keymanager.service  kps_runner.sh  network_setup.sh
key_protection_service/: grpc_server.go  grpc_server_test.go  server.go  server_test.go  service.go  service_test.go
key_protection_service/key_custody_core/: integration_test.go  kps_key_custody_core_cgo.go  kps_key_custody_core_stub.go  types.go
key_protection_service/key_custody_core/fuzz/: Cargo.toml
key_protection_service/key_custody_core/fuzz/fuzz_targets/: fuzz_decap_seal.rs
key_protection_service/proto/: api.pb.go  api.proto  api_grpc.pb.go
keymanager/attestation_service/: go.mod  go.sum  service.go  service_test.go
km_common/proto/: algorithms.pb.go  algorithms.proto  crypto_types.pb.go  crypto_types.proto  (+9 more)
scripts/: heartbeat-test-monitor.sh  vm-test-monitor.sh  vm-test-startup.sh
tests/: Dockerfile.test  requirements.txt  run_grpc_wsd_e2e.sh  run_schema_tests.sh  test_grpc_wsd_e2e.py
workload_service/: grpc_integration_test.go  integration_test.go  proto_enums.go  server.go  server_fuzz_test.go  server_test.go
workload_service/key_custody_core/fuzz/: Cargo.toml
workload_service/key_custody_core/fuzz/fuzz_targets/: fuzz_open.rs
(+20 files in other folders)
