[package]
name = "kps-key-custody-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata.cargo-fuzz]
cargo-to-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kps_key_custody_core = { path = ".." }
km_common = { path = "../../../km_common" }
uuid = { version = "1.20.0", features = ["v4"] }
prost = "0.13"

# Prevent this crate from ruining the workspace for other platforms
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "fuzz_decap_seal"
path = "fuzz_targets/fuzz_decap_seal.rs"
test = false
doc = false

[workspace]
